manifests/ssrf_proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssrf-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ssrf-proxy
  template:
    metadata:
      labels:
        app: ssrf-proxy
    spec:
      containers:
        - name: ssrf-proxy
          image: ubuntu/squid:latest
          ports:
            - containerPort: 3128
          volumeMounts:
            - name: squid-conf
              mountPath: /etc/squid/squid.conf.template
              subPath: squid.conf.template
            - name: squid-conf
              mountPath: /docker-entrypoint-mount.sh
              subPath: docker-entrypoint.sh
          command:
            [
              "sh",
              "-c",
              "cp /docker-entrypoint-mount.sh /ep.sh && sed -i 's/\r$$//' /ep.sh && chmod +x /ep.sh && /ep.sh",
            ]
      volumes:
        - name: squid-conf
          configMap:
            name: ssrf-proxy-config

---
apiVersion: v1
kind: Service
metadata:
  name: ssrf-proxy
spec:
  ports:
    - port: 3128
      targetPort: 3128
  selector:
    app: ssrf-proxy
