manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  tls:
    - hosts:
        - "*.ouchiserver.aokiapp.com"
      secretName: service-tls
  rules:
    - host: dify.ouchiserver.aokiapp.com
      http:
        paths:
          - path: /console/api
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 5001
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 5001
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 5001
          - path: /files
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 5001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3000
